Bug 389619 - Duplicate frames for content in nested fixed-position divs, when on second page in print-preview, patch by dholbert, r+sr=roc, a=dbaron